# exam-prepper-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
android-app/: local.properties
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: questions.json
android-app/app/src/main/java/com/example/quizapp/: MainActivity.kt
android-app/app/src/main/java/com/example/quizapp/data/: QuestionRepository.kt  QuestionRepositoryImpl.kt
android-app/app/src/main/java/com/example/quizapp/di/: AppModule.kt
android-app/app/src/main/java/com/example/quizapp/model/: Question.kt
android-app/app/src/main/java/com/example/quizapp/ui/: QuizNavHost.kt  QuizViewModel.kt
android-app/app/src/main/java/com/example/quizapp/ui/components/: Common.kt
android-app/app/src/main/java/com/example/quizapp/ui/screens/: HomeScreen.kt  QuizScreen.kt  ResultScreen.kt
android-app/app/src/main/java/com/example/quizapp/ui/theme/: Theme.kt
android-app/app/src/main/java/com/example/quizapp/util/: PdfManager.kt
output/: exam_export.md  gcp_professional_cloud_architect_20251224_121319.json  gcp_professional_cloud_architect_20251224_121319.md  gcp_professional_cloud_architect_not_sure.md  leetquiz_gcp_cloud_architect.md  snowpro_advanced_data_engineer_20251224_175029.json
reports/: quiz_report_20251224_161533.md
src/converter/: config.py  main.py  renderer.py
src/quiz_app/: config.py  engine.py  main.py  ui.py
src/quiz_app/models/: __init__.py  question.py  user_answer.py
src/scraper/: browser.py  config.py  main.py
src/scraper/models/: question.py
src/scraper/storage/: __init__.py  csv_saver.py  json_saver.py  saver_factory.py  saver_interface.py  utils.py  yaml_saver.py
